2005-10-21  Tom Tromey  <tromey@redhat.com>

	* tree.hh (tree_generator::visit_generic_invocation): New
	overload.

2005-10-16  Ranjit Mathew  <rmathew@gcc.gnu.org>

	* treegen.cc (tree_code_generator::generate): Skip native methods
	when not using JNI.
	* tree.cc (tree_generator::build_array_reference): Correct a minor
	typo.

2005-10-15  Ranjit Mathew  <rmathew@gcc.gnu.org>

	* tree.cc (tree_generator::build_array_reference): Make CALL_EXPR
	to call _Jv_ThrowBadArrayIndex have TREE_SIDE_EFFECTS and give
	it the missing INDEX parameter.  Explain that converting to 
	unsigned and comparing also takes care of checking for INDEX < 0.

2005-10-14  Tom Tromey  <tromey@redhat.com>

	* hooks.hh (builtin_Jv_ResolvePoolEntry): Declare.
	* decl.cc (initialize_builtins): Define __builtin_expect.
	(initialize_builtin_functions): Define _Jv_ResolvePoolEntry.
	(builtin_Jv_ResolvePoolEntry): Define.
	* classobj.hh (class_object_creator::make_decl): Updated.
	(class_object_creator::create_index_table): Likewise.
	* classobj.cc (create_index_table): Added 'prefix' argument.
	Give name to symbol table.  Use fully qualified class name.
	(make_decl): Added 'name' argument.
	(create_class_instance): Updated.
	* builtins.cc (washed_name): New method.
	(get_itable_decl): Use it.
	(get_otable_decl): Likewise.
	(get_atable_decl): Likewise.
	(get_constant_pool_decl): Likewise.
	(map_utf8const): Pass correct length to build_string.
	* builtins.hh (tree_builtins::washed_name): Declare.

2005-10-13  Ranjit Mathew  <rmathew@gcc.gnu.org>

	* tree.hh (tree_generator::visit_generic_invocation): Implement.
	(tree_generator::visit_annotation): Likewise.
	(tree_generator::visit_annotation_initializer): Likewise.
	(tree_generator::visit_memberref_enum): Likewise.

2005-10-12  Tom Tromey  <tromey@redhat.com>

	* classobj.cc (create_class_instance): Field count includes
	static fields.

2005-10-12  Tom Tromey  <tromey@redhat.com>

	* classobj.cc (create_method_throws): Emit fully qualified name,